--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -8,6 +8,6 @@
     "require": {
         "twbs/bootstrap": "^5.1",
         "phpmailer/phpmailer": "^6.6",
-        "symfony/console": "^5.4",
+        "symfony/console": "^5.4"
     }
 }
